// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-tag ant-tag-rtl osui-tag"
/>
`;

exports[`Tag rtl render component should be rendered correctly in RTL direction 2`] = `
<span
  class="ant-tag ant-tag-checkable osui-tag-checkable"
/>
`;

exports[`Tag visibility can be controlled by visible with hidden as initial value 1`] = `
<span
  class="ant-tag ant-tag-hidden osui-tag"
/>
`;

exports[`Tag visibility can be controlled by visible with hidden as initial value 2`] = `
<span
  class="ant-tag osui-tag"
/>
`;

exports[`Tag visibility can be controlled by visible with hidden as initial value 3`] = `
<span
  class="ant-tag ant-tag-hidden osui-tag"
/>
`;

exports[`Tag visibility can be controlled by visible with visible as initial value 1`] = `
<span
  class="ant-tag osui-tag"
/>
`;

exports[`Tag visibility can be controlled by visible with visible as initial value 2`] = `
<span
  class="ant-tag ant-tag-hidden osui-tag"
/>
`;

exports[`Tag visibility can be controlled by visible with visible as initial value 3`] = `
<span
  class="ant-tag osui-tag"
/>
`;
